--- a/Champaign/params.apsim.sample
+++ b/Champaign/params.apsim.sample
@@ -32,11 +32,11 @@ class: SimpleChecker
 simgfile: /pysims/data/Data/Data/masks/CornMask/crop_mask_2019.nc
 
 # Campaign translator
-tappcmp:
-   class:         camp2json
-   campaignfile:  Campaign.nc4
-   expfile:       exp_template.json
-   outputfile:    experiment.json
+#tappcmp:
+#   class:         camp2json
+#   campaignfile:  Campaign.nc4
+#   expfile:       exp_template.json
+#   outputfile:    experiment.json
 
 # Input translator
 tappinp:
